lab3/lab3.yaml

apiVersion: v1
kind: Service
metadata:
  name: lab3replica
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
