lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - lab3.local
    secretName: tls-secret
  rules:
  - host: lab3.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3replica
            port:
              number: 3000
